--- a/khoa1-modun2.html
+++ b/khoa1-modun2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!DOCTYPE html>
+<link rel="stylesheet" href="css/style.css">
 <html lang="vi">
 <body>
 
@@ -90,3 +90,4 @@ nav img {
   justify-content: space-around;
 }
 </style>
+
